argoproj-demo/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: argoproj-demo
spec:
  type: ClusterIP
  selector:
    app: argoproj-demo
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argoproj-demo
spec:
  selector:
    matchLabels:
      app: argoproj-demo
  replicas: 3 
  template:
    metadata:
      labels:
        app: argoproj-demo
    spec:
      serviceAccountName: tsubauaaa-dev
      containers:
        - name: argoproj-demo
          image: argoproj/rollouts-demo:green
          ports:
            - containerPort: 8080
              name: web
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            preriodSeconds: 5
          readnessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            preriodSeconds: 5
          resources:
            requests:
              memory: 84Mi
              cpu: 100m
            limits:
              memory: 84Mi
              cpu: 100m
