argoproj-demo/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tsubauaaa-external-dev
  namespace: default
  annotations:
    networking.gke.io/certmap: tsubauaaa-dev
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
  addresses:
  - type: NamedAddress
    value: tsubauaaa-dev
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tsubauaaa-dev
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    name: tsubauaaa-external-dev
  hostnames:
  - "tsubauaaa.info"
  rules:
  - matches:
    - path:
        value: /app
    backendRefs:
    - name: argoproj-demo
      port: 80
  # - matches:
  #   - path:
  #       value: /healthz
  #   backendRefs:
  #   - name: argoproj-demo
  #     port: 80
